--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Wordle Clone</title>
 </head>
 <body>
-    <h1>World Clone</h1>
+    <h1>Wordle Clone</h1>
 
     <div id="game-board">
 
